fix bugs, implemente note (continue...)

--- a/LazzyBee/Resource/_lazzybee_guide.htm
+++ b/LazzyBee/Resource/_lazzybee_guide.htm
@@ -1013,13 +1013,13 @@ td.datePickerYear {
   cursor: row-resize;
 }
 </style>
-<meta content="initial-scale=1.0, user-scalable=yes" name="viewport">
+<meta content="width=device-width, initial-scale=1.0, user-scalable=yes" name="viewport">
 <style type="text/css" rel="stylesheet" data-href="http://www.lazzybee.com/mobile-resources/mobile.css">@CHARSET "ISO-8859-1";
 
 html {
 	font-size: 13px !important;
 	box-sizing: border-box;
-	/* min-width: 320px; */
+	min-width: 320px;
 }
 
 /* css for show image in content ckeditor */
